# cadence

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODING_STANDARD.md  CONTRIBUTING.md  DEV_SETUP.md  GLOSSARY.md  README.md  devsetup.sh  package-lock.json  package.json  pyproject.toml
.githooks/: commit-msg  post-merge  pre-commit  pre-commit.old  pre-push.old
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: architect.agent.md  copilot-instructions.md  docs.agent.md  implementer.agent.md  infrastructure.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md  security.agent.md  tester.agent.md
.github/instructions/: agents.instructions.md  git.instructions.md  python.instructions.md  tasks.instructions.md
.github/skills/azd-deployment/: SKILL.md
.github/skills/azure-security/: SKILL.md
.github/skills/docs-generation/: SKILL.md
.github/workflows/: bootstrap-private-runner.yml  cd-api.yml  cd-frontend.yml  ci.yml  deploy-api.yml  deploy-frontend.yml  provision-private-data.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/templates/commands/: specify.md
api/: .env.example  pyproject.toml
api/src/: __init__.py  auth.py  dependencies.py  main.py
api/src/agents/: __init__.py  base.py  nl2sql.py
api/src/api/: dependencies.py  monitoring.py  step_events.py
api/src/entities/: models.py
api/src/models/: __init__.py  execution.py  extraction.py  generation.py  schema.py
api/src/prompts/: nl2sql.md
api/src/routers/: __init__.py  chat.py  threads.py
api/src/util/: __init__.py  search_client.py
backend/: Dockerfile  pyproject.toml
backend/api/: __init__.py  main.py  session_manager.py
backend/api/routers/: __init__.py  chat.py  threads.py
backend/entities/: __init__.py
backend/entities/nl2sql_controller/: __init__.py  executor.py
backend/entities/orchestrator/: __init__.py  orchestrator.py
backend/entities/parameter_extractor/: executor.py
backend/entities/parameter_validator/: executor.py
backend/entities/query_builder/: executor.py
backend/entities/query_validator/: __init__.py  executor.py
backend/entities/workflow/: __init__.py  workflow.py
backend/models/: execution.py  extraction.py
backend/src/api/: main.py  monitoring.py  session_manager.py  step_events.py  workflow_cache.py
backend/src/entities/: __init__.py
backend/src/models/: __init__.py  execution.py  extraction.py  generation.py
data/queries/: query_1.json  query_2.json  query_6.json  query_8.json
data/query_templates/: query_tempate_1.json  query_template_2.json  query_template_3.json  query_template_8.json
data/tables/: application_cities.json  purchasing_purchaseorders.json  sales_customercategories.json  sales_orderlines.json  sales_orders.json  warehouse_stockitemholdings.json  warehouse_stockitems.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  terraform.tfstate
frontend/app/: assistant.tsx  layout.tsx  providers.tsx
frontend/components/assistant-ui/: nl2sql-tool-ui.tsx  step-indicator.tsx  thread-list.tsx  thread.tsx  threadlist-sidebar.tsx
frontend/components/auth/: msalAuthProvider.tsx
frontend/hooks/: useChatApi.ts
frontend/lib/: chatApi.ts  msalConfig.ts  threadCache.ts
infra/: README.md
infra/data/queries/: query_3.json  query_4.json  query_5.json  query_7.json
infra/data/query_templates/: 01_application_cities_by_population.json  02_application_salesperson_directory.json  03_application_population_by_territory.json  04_purchasing_suppliers_by_spend.json  05_purchasing_orders_by_supplier.json  06_purchasing_order_fulfillment.json  08_sales_recent_orders.json  (+10 more)
infra/github-runner/: Dockerfile  entrypoint.sh
infra/private-networking/: README.md  backend.hcl.example  init-remote-state.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  workload.tf
infra/public-networking/: .terraform.lock.hcl  backend.hcl.example  main.tf  outputs.tf  providers.tf  variables.tf  workload.tf
infra/scripts/: configure-ai-search.sh  create-chat-app.ps1  delete-agents.sh  ensure-sql-admin-group.sh  ensure-sql-directory-readers.sh  import-wideworldimporters.ps1  preflight-private-data-access.sh  print-github-vars-from-terraform.sh  run-api.sh  run-frontend.sh  setup-api.sh  setup-frontend.sh  setup-sql-reader-group.ps1  update-github-vars-from-terraform.sh
infra/search-config/: queries_index.json  queries_indexer.json  queries_skill.json  query_templates_index.json  tables_index.json  tables_indexer.json  tables_skill.json
scripts/: create-chat-app.ps1  import-wideworldimporters.ps1  run-api.sh  run-frontend.sh  setup-api.sh  setup-frontend.sh  setup-github-actions.ps1  setup-sql-user.ps1
specs/001-nl2sql-confidence-and-clarification/: plan.md  spec.md  tasks.md
specs/002-dynamic-query-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-simplify-workflow/: plan.md  spec.md  tasks.md
specs/004-what-if-scenarios/: data-model.md  plan.md  quickstart.md  remediation-plan.md  remediation-review.md  research.md  review.md  security-review.md  spec.md  tasks.md
specs/nl2sql-confidence-and-clarification/: plan.md  tasks.md
src/: package.json
src/backend/: .env.example  Dockerfile  README.md  __init__.py
src/frontend/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
tests/: __init__.py  conftest.py
tests/fixtures/: baseline_line_counts.json
tests/integration/: test_workflow_integration.py
tests/unit/: test_allowed_values_provider.py  test_build_query.py  test_clarification_format.py  test_column_filter.py  test_confidence_gate.py  test_confidence_scoring.py  test_data_assistant.py  test_error_recovery.py  test_extract_parameters.py  test_parameterized_queries.py  test_process_query.py  test_schema_area_context.py  test_smoke.py  test_sse_endpoint.py  test_template_regression.py  test_validate_parameters.py  test_validate_query.py
(+225 files in other folders)
